--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "projeto3",
+  "name": "projeto_2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "filesize": "^6.3.0",
+    "firebase": "^8.4.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.2",
+    "react-hook-form": "^7.1.0",
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "styled-components": "^5.2.2",
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
